--- a/HangmanIndex.html
+++ b/HangmanIndex.html
@@ -18,9 +18,8 @@
     <option id="Hard">Hard</option>
 </select>
 
-<div id="answer"></div>
 
-<select class="selector" id="category" onchange="doBackground(this.id)">
+<select class="selector" id="category">
     <option value="0">Numbers (yes, really)</option>
     <option value="1">U.S. Vice Presidents (Last Names)</option>
     <option value="2">House Cats</option>
@@ -30,12 +29,15 @@
     <option value="6">Strange Colors (good luck with this one...)</option>
 </select>
 
+<div id="answer"></div>
+
 <div id="remainingGuesses">Remaining Guesses: 13</div>
 
 <div id="message"></div>
 
-
 <div id="buttons"></div>
+
+<img id="image" width="400">
 
 </body>
 </html>
